--- a/smartcare_django/smartcare_finance/templates/smartcare_finance/invoice.html
+++ b/smartcare_django/smartcare_finance/templates/smartcare_finance/invoice.html
@@ -46,7 +46,7 @@
           <tr>
             <td>{{ invoice.staff.first_name }} {{ invoice.staff.last_name }}</td>
             <td>£{{ invoice.staff.staff_info.payrate.rate|floatformat:-2 }}</td>
-            <td>{{ invoice.duration }}</td>
+            <td>{{ invoice.formatted_duration }}</td>
             <td>£{{ invoice.amount|floatformat:-2 }}</td>
           </tr>
         </tbody>
